fixed table column text string breaking and overflow issue

--- a/src/columns/columns.css
+++ b/src/columns/columns.css
@@ -14,6 +14,8 @@
   flex-grow: 0;
   flex-shrink: 0;
   box-sizing: border-box;
+  min-width: 0;
+  overflow-x: auto;
   margin-top: var(--spacing-3x);
 }
 
